--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+:root {
+    --light-blue: rgb(56, 171, 216);
+    --input-width: 250px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0f0f5;
+    height: 100vh;
+    width: 100vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.692);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.register-panel {
+    width: 250px;
+    padding: 40px 50px 30px;
+    background-color: white;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    margin-top: 50px;
+    border-radius: 8px;
+    border: 0;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+    width: calc(100% - 28px);
+    border: 0;
+    border-radius: 8px;
+    background-color: #f0f0f5;
+    padding: 10px 14px;
+    font-size: 18px;
+    margin-top: 12px;
+    outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.confirmInput {
+    border-radius: 8px;
+    transition-delay: 300ms;
+}
+
+.errorInput {
+    border-radius: 8px 8px 0px 0px;
+    transition-delay: 300ms;
+} 
+
+button {
+    border: 1px solid var(--light-blue);
+    border-radius: 8px;
+    padding: 8px 50px;
+    margin-top: 20px;
+    color: var(--light-blue);
+    background-color: white;
+    font-size: 18px;
+    cursor: pointer;
+    outline: none;
+    transition: 400ms;
+}
+
+button:hover {
+    color: white;
+    background-color: var(--light-blue);
+    border: 1px solid black white;
+}
+
+form div {
+    text-align: center;
+    justify-items: center;
+    text-transform: initial;
+    font-size: 14px;
+    color: white;
+    width: var(--input-width);
+    border-radius: 0px 0px 8px 8px;
+    background-color: rgba(255, 0, 0, 0.507);
+}
+
+#errorField {
+    position: relative;
+    animation: 500ms forwards divError;
+}
+
+#hiddenErrorField {
+    position: relative;
+    animation: 300ms forwards divHiddenError;
 }
